# fenrir-agent

./: .gitignore  .gitleaks.toml  CHANGELOG.md  ETHICS.md  HANDOVER.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
benchmark_loader/: Dockerfile  __init__.py  families.py  generate.py  load.py  load_generated.py  perturb.py
benchmark_loader/templates/: .gitkeep
dashboard/queries/: by_family_verdict.sql
fenrir/: Dockerfile  __init__.py  core.py  curriculum.py  db.py  predict.py  reflect.py  settings.py
fenrir/bootstrap/: __init__.py  __main__.py  anchors.py  backfill_embeddings.py  models.py  relations.py
fenrir/consolidation/: sleep.py
fenrir/llm/: budget.py  proxy.py  router.py
fenrir/memory/: embed.py  episodes.py  retrieval.py  salience.py
fenrir/sandbox/: Dockerfile.sandbox  __init__.py  runner.py
fenrir/skills/: admit.py  crystallize.py
fenrir/verify/: sympy_oracle.py
infra/: .env.example  docker-compose.yml
infra/migrations/: 0001_baseline_schema.sql  0002_example_additive.sql  0003_cognitive_core.sql  0004_consolidation_replay.sql  0005_reuse_signal.sql  0006_curriculum_adjacency.sql  0007_reflection.sql  0008_cohort_id.sql  0009_benchmark_family.sql  README.md
specs/001-infra-stack/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-cognitive-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-memory-consolidation-replay/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-feasibility-gated-curriculum/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-pe-gated-reflection/: analysis.md  (+6 more)
tests/: conftest.py
(+84 files in other folders)
