[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fenrir"
version = "0.6.0"
requires-python = ">=3.12"
# 01-infra: bootstrap + benchmark-loader. 002-cognitive-core: the loop, proxy, sandbox.
dependencies = [
    "psycopg[binary]>=3.2.0",
    "httpx>=0.27.0",
    "datasets>=2.19.0",
    "huggingface-hub>=0.23.0",
    "pydantic-settings>=2.3.0",
    "sympy>=1.12",
    "pyyaml>=6.0",
    # 002-cognitive-core (T001)
    "anthropic>=0.40.0",       # frontier teacher (claude-opus-4-8) via the proxy
    "fastapi>=0.110.0",        # fenrir:8080/llm proxy
    "uvicorn[standard]>=0.29.0",
    "redis>=5.0.0",            # fast budget counter (source-of-truth stays postgres)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "testcontainers>=4.5.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.9.0",
    "pip-audit>=2.10.0",
]

[tool.setuptools.packages.find]
# Only the application package is distributable. specs/, tests/, benchmark_loader/,
# infra/ etc. are repo dirs, not installable packages.
include = ["fenrir*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.bandit]
# Scan app roots only; tests/ excluded (asserts + fixture secrets trip bandit with no real risk).
exclude_dirs = ["tests", ".venv", "build"]
